# Project_Chess

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run.bash
config/: settings.json
shader/: fragment.glsl  vertex.glsl
src/: input.h  main.cpp
src/core/: shader.cpp  window.cpp
src/render/: board.cpp  board.h  piece.cpp  piece.h  sprite.cpp  sprite.h  texture.cpp  texture_source.h
src/render/gl/: texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
